fixed the horizontal scroll and the photo gallery

--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@ video {
 }
 
 /* ========== RESET & GLOBAL ========== */
-html,
+html{
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -97,6 +100,16 @@ body {
 
 .nav-links li a:hover::after {
   width: 100%;
+}
+
+.nav-links.active {
+  background-color: white; /* Set the background color to transparent */
+  /* ... rest of the styles ... */
+}
+
+.nav-links.active .message {
+  background-color: rgba(0, 0, 0, 0.5); /* Set the background color for the message element */
+  /* ... rest of the styles ... */
 }
 
 .hamburger {
@@ -530,7 +543,7 @@ section {
 
 /* Photo Gallery */
 .photo-gallery {
-  padding: 40px;
+  padding: 00px;
   text-align: center;
 }
 
@@ -548,7 +561,7 @@ section {
 
 .gallery-main {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1200px;
   margin-bottom: 20px;
 }
 
